change server config page